--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
-  "name": "redux-simple-starter",
-  "version": "1.0.0",
-  "description": "Simple starter package for Redux with React and Babel support",
+  "name": "react-cheatsheet",
+  "version": "0.0.1",
+  "description": "A searchable React/ES6 Cheatsheet",
   "main": "index.js",
-  "repository": "git@github.com:jinksi/ReduxSimpleStarter.git",
+  "repository": "git@github.com:jinksi/react-cheatsheet.git",
   "scripts": {
     "start": "webpack-dev-server --inline --progress",
     "build": "webpack -p --progress"
   },
   "author": "Eric Jinks",
-  "license": "ISC",
+  "license": "",
   "devDependencies": {
     "babel-core": "^6.2.1",
     "babel-loader": "^6.2.0",
@@ -20,9 +20,7 @@
   },
   "dependencies": {
     "babel-preset-stage-1": "^6.1.18",
-    "lodash": "^4.5.0",
     "classnames": "^2.2.3",
-    "react": "^0.14.3",
     "react": "^0.14.3",
     "react-dom": "^0.14.3",
     "react-redux": "^4.0.0",
