--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "repository": "git@github.com:jinksi/react-cheatsheet.git",
   "scripts": {
     "start": "webpack-dev-server --inline --progress & gulp",
-    "build": "webpack -p --progress && gulp build"
+    "build": "gulp build && webpack -p --progress"
   },
   "author": "Eric Jinks",
   "license": "",
@@ -15,12 +15,14 @@
     "babel-loader": "^6.2.0",
     "babel-preset-es2015": "^6.1.18",
     "babel-preset-react": "^6.1.18",
-    "webpack": "^1.12.9",
-    "webpack-dev-server": "^1.14.0",
     "browser-sync": "^2.2.0",
     "gulp": "^3.8.11",
+    "gulp-markdown-to-json": "^0.2.1",
     "gulp-rucksack": "^0.1.2",
-    "gulp-sass": "^2.2.0"
+    "gulp-sass": "^2.2.0",
+    "gulp-util": "^3.0.7",
+    "webpack": "^1.12.9",
+    "webpack-dev-server": "^1.14.0"
   },
   "dependencies": {
     "babel-preset-stage-1": "^6.1.18",
