--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "gulp-rucksack": "^0.1.2",
     "gulp-sass": "^2.2.0",
     "gulp-util": "^3.0.7",
+    "json-loader": "^0.5.4",
     "webpack": "^1.12.9",
     "webpack-dev-server": "^1.14.0"
   },
